Updated page FEM ConstraintElectrostaticPotential

--- a/wiki/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/FEM_ConstraintElectrostaticPotential.html
@@ -82,18 +82,19 @@
 <li>In the <a href="3D_View.html" title="3D View">3D View</a> select the object the boundary condition should be applied to. <span style="font-size:small;"><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: To remove objects from the selection, press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Remove</span> button.</li></ol>
 <h2><span class="mw-headline" id="Options">Options</span></h2>
 <p>The dialog offers the following settings:
-</p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=FEM_ElectrostaticPotential_dialog.png&amp;filetimestamp=20250402131339&amp;.html" class="mw-file-description"><img src="File/FEM_ElectrostaticPotential_dialog.png" decoding="async" width="385" height="586" class="mw-file-element" data-file-width="385" data-file-height="586"></a></span>
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=FEM_ElectrostaticPotential_dialog.png&amp;filetimestamp=20260125143029&amp;.html" class="mw-file-description"><img src="File/FEM_ElectrostaticPotential_dialog.png" decoding="async" width="489" height="616" class="mw-file-element" data-file-width="489" data-file-height="616"></a></span>
 </p>
 <ul><li><b>Boundary Condition</b>: To choose between Dirichlet (prescribed potential) and Neumann (prescribed electric flux density) boundary condition type. <span style="font-size:small;"><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li>
 <li><b>Potential</b>: The electric potential in V.</li>
-<li><b>Electromagnetic Potential</b>: To enable the input of the components of a potential vector field.</li>
-<li><b>x</b>: The real/imaginary part of the potential in x-direction in V.<br> For other coordinate systems than Cartesian 3D, this will be the first coordinate of the system instead of x.</li>
-<li><b>y</b>: The real/imaginary part of the potential in y-direction in V.<br> For other coordinate systems than Cartesian 3D, this will be the second coordinate of the system instead of y.</li>
-<li><b>z</b>: The real/imaginary part of the potential in z-direction in V.<br> For other coordinate systems than Cartesian 3D, this will be the third coordinate of the system instead of z. If the coordinate system has no third coordinate, this setting will be ignored.</li>
-<li><b>x, y, z checkboxes</b>: To declare the corresponding potential as unknown for the solver.</li>
-<li><b>Electric Infinity</b>: Option to make a spherical approximation that the volume above the face extends to infinity.</li>
+<li><b>Electromagnetic Potential</b>: To enable the input of the components of a potential vector field.
+<ul><li><b>x/y/z</b>: The real/imaginary part of the potential in x, y or z-direction in V. For other coordinate systems than Cartesian 3D, this will be the first, second or third coordinate of the system instead of x, y or z. If the coordinate system has no third coordinate, z will be ignored.</li>
+<li><b>x, y, z checkboxes</b>: To declare the corresponding potential as unknown for the solver.</li></ul></li>
+<li><b>Electric Infinity</b> (<span style="font-size:small;color:green;">1.2 and above</span>: <b>Far field</b>): Option to make a spherical approximation that the volume above the face extends to infinity.</li>
 <li><b>Potential Constant</b>: Option to set a constant potential.</li>
 <li><b>Electric Flux Density</b>: The electric flux density (electric displacement field <i>D</i>) in C/m^2. <span style="font-size:small;"><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li>
+<li><b>Magnetic Flux Density</b> To enable the input of the components of a magnetic flux density in mT. <span style="font-size:small;"><a href="Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span>
+<ul><li><b>x/y/z</b>: The real/imaginary part of the magnetic flux density in x, y or z-direction in mT. For other coordinate systems than Cartesian 3D, this will be the first, second or third coordinate of the system instead of x, y or z. If the coordinate system has no third coordinate, z will be ignored.</li>
+<li><b>x, y, z checkboxes</b>: To declare the corresponding magnetic flux density as unknown for the solver.</li></ul></li>
 <li><b>Capacitance Body</b>: Counter of the body (or face) with a capacitance.</li></ul>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
 <ul><li>Capacitance Body, Electric Infinity, and Potential Constant are Elmer-specific features and won't work with CalculiX.</li></ul>
@@ -143,15 +144,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125142913
+Cached time: 20260125143743
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.114 seconds
-Preprocessor visited node count: 441/1000000
-Post&#8208;expand include size: 24589/2097152 bytes
-Template argument size: 9907/2097152 bytes
+CPU time usage: 0.104 seconds
+Real time usage: 0.147 seconds
+Preprocessor visited node count: 456/1000000
+Post&#8208;expand include size: 24729/2097152 bytes
+Template argument size: 9916/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -159,19 +160,19 @@ Unstrip post&#8208;expand size: 1829/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.464      1 -total
- 37.51%    8.052      1 Template:GuiCommandContainer
- 18.95%    4.067      1 Template:FEM_Tools_navi
- 18.38%    3.946      2 Template:Navigation_menu_2
- 15.41%    3.308      1 Template:GuiCommandFemInfo
- 13.21%    2.836      1 Template:GuiCommand
- 12.02%    2.580      2 Template:Docnav
- 10.66%    2.289      1 Template:Userdocnavi
-  4.33%    0.930      1 Template:Caption
-  4.25%    0.913      3 Template:Button
+100.00%   20.561      1 -total
+ 30.13%    6.194      1 Template:GuiCommandContainer
+ 21.12%    4.343      1 Template:FEM_Tools_navi
+ 19.46%    4.001      2 Template:Navigation_menu_2
+ 14.81%    3.045      1 Template:GuiCommandFemInfo
+ 11.67%    2.400      1 Template:Userdocnavi
+  9.93%    2.041      1 Template:GuiCommand
+  9.01%    1.853      7 Template:Version
+  8.25%    1.696      2 Template:Docnav
+  5.57%    1.146      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125142913 and revision id 1744044. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125143751 and revision id 1744046. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
