--- a/wiki/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/FEM_ConstraintElectrostaticPotential.html
@@ -75,7 +75,7 @@
 <ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=FEM_ConstraintElectrostaticPotential.svg&amp;filetimestamp=20241127174342&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintElectrostaticPotential.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Electrostatic Potential Boundary Condition</a></span> button.</li>
 <li>Select the <b>Model &rarr; Electromagnetic Boundary Conditions &rarr; <span typeof="mw:File"><a href="index.php?title=FEM_ConstraintElectrostaticPotential.svg&amp;filetimestamp=20241127174342&amp;.html" class="mw-file-description"><img src="File/FEM_ConstraintElectrostaticPotential.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Electrostatic Potential Boundary Condition</b> option from the menu.</li></ul></li>
 <li><span style="font-size:small;color:green;">1.1 and above</span>: Select a boundary condition type and its parameters:
-<ul><li><i>Dirichlet</i> - select and specify <i>Potential</i> or <i>Electromagnetic Potential</i>. Optionally, set <i>Electric Infinity</i> and <i>Potential Constant</i>.</li>
+<ul><li><i>Dirichlet</i> - select and specify <i>Potential</i> or <i>Electromagnetic Potential</i>. Optionally, set <i>Electric Infinity</i> (<span style="font-size:small;color:green;">1.2 and above</span>: <i>Far field</i>) and <i>Potential Constant</i>.</li>
 <li><i>Neumann</i> - specify <i>Electric Flux Density</i> or (<span style="font-size:small;"><a href="Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span>) check <i>Magnetic flux density</i> and specify its vector components.</li></ul></li>
 <li>Optionally, define the <i>Capacitance Body</i>.</li>
 <li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Add</span> button.</li>
@@ -144,15 +144,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125143743
+Cached time: 20260125143821
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.147 seconds
-Preprocessor visited node count: 456/1000000
-Post&#8208;expand include size: 24729/2097152 bytes
-Template argument size: 9916/2097152 bytes
+CPU time usage: 0.103 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 463/1000000
+Post&#8208;expand include size: 24792/2097152 bytes
+Template argument size: 9919/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -160,19 +160,19 @@ Unstrip post&#8208;expand size: 1829/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.561      1 -total
- 30.13%    6.194      1 Template:GuiCommandContainer
- 21.12%    4.343      1 Template:FEM_Tools_navi
- 19.46%    4.001      2 Template:Navigation_menu_2
- 14.81%    3.045      1 Template:GuiCommandFemInfo
- 11.67%    2.400      1 Template:Userdocnavi
-  9.93%    2.041      1 Template:GuiCommand
-  9.01%    1.853      7 Template:Version
-  8.25%    1.696      2 Template:Docnav
-  5.57%    1.146      1 Template:Caption
+100.00%   22.277      1 -total
+ 36.75%    8.186      1 Template:GuiCommandContainer
+ 18.91%    4.213      1 Template:GuiCommandFemInfo
+ 18.63%    4.150      1 Template:FEM_Tools_navi
+ 17.96%    4.001      2 Template:Navigation_menu_2
+ 13.19%    2.939      1 Template:GuiCommand
+ 10.66%    2.374      1 Template:Userdocnavi
+  8.57%    1.909      2 Template:Docnav
+  6.86%    1.528      1 Template:VersionMinus
+  6.03%    1.344      7 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125143751 and revision id 1744046. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125143825 and revision id 1744047. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
