--- a/wiki/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/FEM_ConstraintElectrostaticPotential.html
@@ -97,7 +97,7 @@
 <li><b>x, y, z checkboxes</b>: To declare the corresponding magnetic flux density as unknown for the solver.</li></ul></li>
 <li><b>Capacitance Body</b>: Counter of the body (or face) with a capacitance.</li></ul>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
-<ul><li>Capacitance Body, Electric Infinity (<span style="font-size:small;color:green;">1.2 and above</span>: <b>Far field</b>), and Potential Constant are Elmer-specific features and won't work with CalculiX.</li></ul>
+<ul><li>Capacitance Body, Electric Infinity (<span style="font-size:small;color:green;">1.2 and above</span>: Far field), and Potential Constant are Elmer-specific features and won't work with CalculiX.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -144,12 +144,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125144429
+Cached time: 20260125144439
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.152 seconds
+CPU time usage: 0.110 seconds
+Real time usage: 0.128 seconds
 Preprocessor visited node count: 468/1000000
 Post&#8208;expand include size: 24855/2097152 bytes
 Template argument size: 9922/2097152 bytes
@@ -160,19 +160,19 @@ Unstrip post&#8208;expand size: 1829/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.320      1 -total
- 36.11%    8.783      1 Template:GuiCommandContainer
- 15.97%    3.883      1 Template:FEM_Tools_navi
- 15.86%    3.857      2 Template:Navigation_menu_2
- 14.94%    3.634      2 Template:Docnav
- 14.23%    3.461      1 Template:GuiCommand
- 11.82%    2.874      1 Template:Userdocnavi
- 11.73%    2.854      1 Template:GuiCommandFemInfo
-  4.78%    1.162      1 Template:Caption
-  4.13%    1.004      7 Template:Version
+100.00%   21.785      1 -total
+ 36.99%    8.058      1 Template:GuiCommandContainer
+ 19.34%    4.212      1 Template:FEM_Tools_navi
+ 18.39%    4.005      1 Template:GuiCommandFemInfo
+ 16.73%    3.644      2 Template:Navigation_menu_2
+ 11.17%    2.434      1 Template:Userdocnavi
+ 10.21%    2.224      1 Template:GuiCommand
+  9.32%    2.031      2 Template:Docnav
+  5.61%    1.223      1 Template:VersionMinus
+  5.38%    1.172      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125144429 and revision id 1744048. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125144439 and revision id 1744049. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
