--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -22,14 +22,14 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/PartDesign_Body.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>PartDesign Body
+<p>PartDesign T&#283;leso
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Menu location
 </th></tr>
 <tr>
-<td class="ctEven">Part Design &rarr; New Body
+<td class="ctEven">Part Design &rarr; Nov&eacute; t&#283;leso
 </td></tr>
 <tr>
 <th class="ctOdd">Workbenches
@@ -53,7 +53,7 @@
 <th class="ctOdd">See also
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../Std_Part.html" title="Std Part">Std Part</a>, <a href="../Feature_editing.html" title="Feature editing">Feature editing</a>
+<td class="ctEven"><a href="../Std_Part.html" title="Std Part">Std Part</a>, <a href="../Feature_editing.html" title="Feature editing">&Uacute;pravy prvk&#367;</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -245,35 +245,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125164948
+Cached time: 20260125165239
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.156 seconds
-Real time usage: 0.241 seconds
-Preprocessor visited node count: 1495/1000000
-Post&#8208;expand include size: 37903/2097152 bytes
-Template argument size: 9831/2097152 bytes
+CPU time usage: 0.207 seconds
+Real time usage: 0.422 seconds
+Preprocessor visited node count: 1497/1000000
+Post&#8208;expand include size: 37694/2097152 bytes
+Template argument size: 9848/2097152 bytes
 Highest expansion depth: 7/100
-Expensive parser function count: 3/100
+Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
 Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.291      1 -total
- 15.37%    8.806     14 Template:PropertyData
- 13.35%    7.646      1 Template:PartDesign_Tools_navi/cs
- 11.80%    6.760     20 Template:Variable
-  8.90%    5.100      3 Template:TitleProperty
-  8.06%    4.619      1 Template:Userdocnavi/cs
-  7.37%    4.222      1 Template:GuiCommand
-  6.24%    3.577      2 Template:Navigation_menu_2
-  5.23%    2.999      6 Template:PropertyView
-  4.93%    2.826     27 Template:Incode
+100.00%  105.406      1 -total
+ 18.71%   19.719     14 Template:PropertyData
+ 16.27%   17.146     20 Template:Variable
+  9.35%    9.854      6 Template:PropertyView
+  8.07%    8.508      1 Template:PartDesign_Tools_navi/cs
+  7.67%    8.086      3 Template:TitleProperty
+  6.98%    7.358     27 Template:Incode
+  5.21%    5.487      1 Template:Userdocnavi/cs
+  4.80%    5.057      1 Template:GuiCommand
+  4.10%    4.326      8 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125164948 and revision id 1744053. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125165238 and revision id 1744055. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
