--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -58,7 +58,9 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-<h2><span class="mw-headline" id="Description">Description</span></h2>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Popis">Popis</span></h2>
 <p>A <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> is the base element to create solids shapes with the <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a>. It can contain <a href="../Sketch.html" title="Sketch">sketches</a>, <a href="../Datum.html" title="Datum">datum objects</a>, and <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Features</a> that help in building a solid object. A Body is intended to hold a <a href="../Feature_editing.html#What_is_a_contiguous_solid?" title="Feature editing">single contiguous solid</a>, but in FreeCAD version 1.0 an experimental property (<span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Allow Compound</b>) has been introduced to allow non-contiguous Bodies.
 </p><p>The Body provides an <b>Origin</b> object which includes local X-, Y- and Z-axes, standard planes and an origin point. These elements can be used as references to attach <a href="../Sketch.html" title="Sketch">sketches</a> and <a href="../PartDesign_CompPrimitiveAdditive.html" class="mw-redirect" title="PartDesign CompPrimitiveAdditive">primitive objects</a>.
 </p><p>Do not confuse the <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> with the <span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Part.html" title="Std Part">Std Part</a>. The first one is a specific object used in the <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a>, intended to model a solid object by means of <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Features</a>. The <a href="../Std_Part.html" title="Std Part">Std Part</a> is a grouping object intended to create <a href="../Assembly.html" title="Assembly">assemblies</a>; it is not used for modelling, just to arrange different objects in space. Multiple bodies, and other <a href="../Std_Part.html" title="Std Part">Std Parts</a>, can be placed inside a single <a href="../Std_Part.html" title="Std Part">Std Part</a> to create a complex assembly.
@@ -245,13 +247,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125165239
+Cached time: 20260125165247
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.207 seconds
-Real time usage: 0.422 seconds
-Preprocessor visited node count: 1497/1000000
+CPU time usage: 0.173 seconds
+Real time usage: 0.269 seconds
+Preprocessor visited node count: 1498/1000000
 Post&#8208;expand include size: 37694/2097152 bytes
 Template argument size: 9848/2097152 bytes
 Highest expansion depth: 7/100
@@ -261,19 +263,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  105.406      1 -total
- 18.71%   19.719     14 Template:PropertyData
- 16.27%   17.146     20 Template:Variable
-  9.35%    9.854      6 Template:PropertyView
-  8.07%    8.508      1 Template:PartDesign_Tools_navi/cs
-  7.67%    8.086      3 Template:TitleProperty
-  6.98%    7.358     27 Template:Incode
-  5.21%    5.487      1 Template:Userdocnavi/cs
-  4.80%    5.057      1 Template:GuiCommand
-  4.10%    4.326      8 Template:Caption
+100.00%   86.086      1 -total
+ 13.90%   11.967      1 Template:Userdocnavi/cs
+ 13.12%   11.292     14 Template:PropertyData
+ 11.55%    9.944     20 Template:Variable
+  9.50%    8.182      1 Template:PartDesign_Tools_navi/cs
+  9.26%    7.968      3 Template:TitleProperty
+  7.92%    6.821      8 Template:Caption
+  6.52%    5.617      6 Template:PropertyView
+  5.75%    4.947      2 Template:Code
+  4.82%    4.153     27 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125165238 and revision id 1744055. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125165247 and revision id 1744057. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
