--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -63,7 +63,7 @@
 <h2><span class="mw-headline" id="Popis">Popis</span></h2>
 <p><a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign T&#283;lo</a> je z&aacute;kladn&iacute;m prvkem pro vytv&aacute;&#345;en&iacute; pevn&yacute;ch tvar&#367; pomoc&iacute; <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">procovn&iacute; plochy PartDesign Workbench</a>. M&#367;&#382;e obsahovat <a href="../Sketch.html" title="Sketch">n&aacute;&#269;rty</a>, <a href="../Datum.html" title="Datum">referen&#269;n&iacute; objekty</a> a <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign prvky</a>, kter&eacute; pom&aacute;haj&iacute; p&#345;i vytv&aacute;&#345;en&iacute; pevn&eacute;ho objektu. T&#283;leso je ur&#269;eno k uchov&aacute;v&aacute;n&iacute;  <a href="../Feature_editing.html#What_is_a_contiguous_solid?" title="Feature editing">jedin&eacute;ho souvisl&eacute;ho pevn&eacute;ho objektu</a>, ale ve verzi FreeCADu 1.0 byla zavedena experiment&aacute;ln&iacute; vlastnost (<span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Povolit slo&#382;eninu</b>), kter&aacute; umo&#382;&#328;uje vytv&aacute;&#345;et nesouvisl&aacute; t&#283;lesa.
 </p><p>T&#283;leso poskytuje objekt <b>Po&#269;&aacute;tek</b>, kter&yacute; obsahuje lok&aacute;ln&iacute; osy X, Y a Z, standardn&iacute; roviny a po&#269;&aacute;te&#269;n&iacute; bod. Tyto prvky lze pou&#382;&iacute;t jako referenci pro p&#345;ipojen&iacute; <a href="../Sketch.html" title="Sketch">n&aacute;&#269;rt&#367;</a> a <a href="../PartDesign_CompPrimitiveAdditive.html" class="mw-redirect" title="PartDesign CompPrimitiveAdditive">prvotn&iacute;ch objekt&#367;</a>.
-</p><p>Do not confuse the <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> with the <span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Part.html" title="Std Part">Std Part</a>. The first one is a specific object used in the <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a>, intended to model a solid object by means of <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Features</a>. The <a href="../Std_Part.html" title="Std Part">Std Part</a> is a grouping object intended to create <a href="../Assembly.html" title="Assembly">assemblies</a>; it is not used for modelling, just to arrange different objects in space. Multiple bodies, and other <a href="../Std_Part.html" title="Std Part">Std Parts</a>, can be placed inside a single <a href="../Std_Part.html" title="Std Part">Std Part</a> to create a complex assembly.
+</p><p>Nezam&#283;&#328;ujte <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign T&#283;leso</a> s <span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Part.html" title="Std Part">Std Part</a>. Prvn&iacute; z nich je specifick&yacute; objekt pou&#382;&iacute;van&yacute; v <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plo&scaron;e PartDesign</a>, ur&#269;en&yacute; k modelov&aacute;n&iacute; pevn&eacute;ho objektu pomoc&iacute; <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign prvk&#367;</a>. <a href="../Std_Part.html" title="Std Part">Std Part</a> je seskupovac&iacute; objekt ur&#269;en&yacute; k vytv&aacute;&#345;en&iacute; <a href="../Assembly.html" title="Assembly">sestav</a>; nepou&#382;&iacute;v&aacute; se k modelov&aacute;n&iacute;, pouze k uspo&#345;&aacute;d&aacute;n&iacute; r&#367;zn&yacute;ch objekt&#367; v prostoru. V r&aacute;mci jedn&eacute; <a href="../Std_Part.html" title="Std Part">Std Parts</a> lze um&iacute;stit v&iacute;ce t&#283;les a dal&scaron;&iacute;ch <a href="../Std_Part.html" title="Std Part">Std Parts</a> a vytvo&#345;it tak slo&#382;itou sestavu.
 </p><p><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body_tree.png&amp;filetimestamp=20191214042252&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body_tree.png" decoding="async" width="200" height="251" class="mw-file-element" data-file-width="251" data-file-height="315"></a></span> <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body_example.png&amp;filetimestamp=20180204083032&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body_example.png" decoding="async" width="300" height="261" class="mw-file-element" data-file-width="467" data-file-height="406"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Left: the Tree View showing the features that sequentially produce the final shape of the object. Right: the final object visible in the <a href="../3D_View.html" title="3D View">3D View</a>.</p>
@@ -247,12 +247,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125170457
+Cached time: 20260125170902
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.191 seconds
-Real time usage: 0.264 seconds
+CPU time usage: 0.186 seconds
+Real time usage: 0.284 seconds
 Preprocessor visited node count: 1498/1000000
 Post&#8208;expand include size: 37705/2097152 bytes
 Template argument size: 9859/2097152 bytes
@@ -263,19 +263,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.773      1 -total
- 13.40%    8.144     14 Template:PropertyData
- 12.79%    7.771      1 Template:PartDesign_Tools_navi/cs
- 11.17%    6.789     20 Template:Variable
-  9.75%    5.927      1 Template:Userdocnavi/cs
-  7.93%    4.818      2 Template:Navigation_menu_2
-  7.77%    4.723      3 Template:TitleProperty
-  7.14%    4.340      1 Template:GuiCommand
-  5.90%    3.584      6 Template:PropertyView
-  5.61%    3.410      2 Template:Docnav
+100.00%   76.803      1 -total
+ 14.78%   11.349     14 Template:PropertyData
+ 11.76%    9.030      1 Template:PartDesign_Tools_navi/cs
+ 11.66%    8.959     20 Template:Variable
+ 10.42%    8.005      1 Template:Userdocnavi/cs
+  9.75%    7.486      3 Template:TitleProperty
+  7.07%    5.430      6 Template:PropertyView
+  6.77%    5.201      2 Template:Navigation_menu_2
+  6.00%    4.606      1 Template:GuiCommand
+  4.99%    3.829     27 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125170457 and revision id 1744061. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125170902 and revision id 1744063. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
