--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -66,7 +66,7 @@
 </p><p>Nezam&#283;&#328;ujte <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign T&#283;leso</a> s <span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Part.html" title="Std Part">Std Part</a>. Prvn&iacute; z nich je specifick&yacute; objekt pou&#382;&iacute;van&yacute; v <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plo&scaron;e PartDesign</a>, ur&#269;en&yacute; k modelov&aacute;n&iacute; pevn&eacute;ho objektu pomoc&iacute; <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign prvk&#367;</a>. <a href="../Std_Part.html" title="Std Part">Std Part</a> je seskupovac&iacute; objekt ur&#269;en&yacute; k vytv&aacute;&#345;en&iacute; <a href="../Assembly.html" title="Assembly">sestav</a>; nepou&#382;&iacute;v&aacute; se k modelov&aacute;n&iacute;, pouze k uspo&#345;&aacute;d&aacute;n&iacute; r&#367;zn&yacute;ch objekt&#367; v prostoru. V r&aacute;mci jedn&eacute; <a href="../Std_Part.html" title="Std Part">Std Parts</a> lze um&iacute;stit v&iacute;ce t&#283;les a dal&scaron;&iacute;ch <a href="../Std_Part.html" title="Std Part">Std Parts</a> a vytvo&#345;it tak slo&#382;itou sestavu.
 </p><p><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body_tree.png&amp;filetimestamp=20191214042252&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body_tree.png" decoding="async" width="200" height="251" class="mw-file-element" data-file-width="251" data-file-height="315"></a></span> <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body_example.png&amp;filetimestamp=20180204083032&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body_example.png" decoding="async" width="300" height="261" class="mw-file-element" data-file-width="467" data-file-height="406"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Left: the Tree View showing the features that sequentially produce the final shape of the object. Right: the final object visible in the <a href="../3D_View.html" title="3D View">3D View</a>.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Vlevo: Stromov&aacute; struktura zobrazuj&iacute;c&iacute; prvky, kter&eacute; postupn&#283; vytv&aacute;&#345;ej&iacute; kone&#269;n&yacute; tvar objektu. Vpravo: kone&#269;n&yacute; objekt viditeln&yacute; ve <a href="../3D_View.html" title="3D View">3D pohledu</a>.</p>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
 <p>If no previous solid is selected:
 </p>
@@ -247,15 +247,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125170902
+Cached time: 20260125171045
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.186 seconds
-Real time usage: 0.284 seconds
+CPU time usage: 0.177 seconds
+Real time usage: 0.271 seconds
 Preprocessor visited node count: 1498/1000000
-Post&#8208;expand include size: 37705/2097152 bytes
-Template argument size: 9859/2097152 bytes
+Post&#8208;expand include size: 37719/2097152 bytes
+Template argument size: 9866/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -263,19 +263,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   76.803      1 -total
- 14.78%   11.349     14 Template:PropertyData
- 11.76%    9.030      1 Template:PartDesign_Tools_navi/cs
- 11.66%    8.959     20 Template:Variable
- 10.42%    8.005      1 Template:Userdocnavi/cs
-  9.75%    7.486      3 Template:TitleProperty
-  7.07%    5.430      6 Template:PropertyView
-  6.77%    5.201      2 Template:Navigation_menu_2
-  6.00%    4.606      1 Template:GuiCommand
-  4.99%    3.829     27 Template:Incode
+100.00%   71.753      1 -total
+ 17.24%   12.373      1 Template:PartDesign_Tools_navi/cs
+ 13.77%    9.879     14 Template:PropertyData
+ 10.91%    7.827     20 Template:Variable
+  9.12%    6.544      1 Template:Userdocnavi/cs
+  8.68%    6.227      1 Template:GuiCommand
+  7.09%    5.086      2 Template:Navigation_menu_2
+  6.53%    4.684      3 Template:TitleProperty
+  5.68%    4.078      2 Template:Code
+  5.10%    3.660      6 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125170902 and revision id 1744063. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125171044 and revision id 1744065. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
