--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -67,7 +67,9 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body_tree.png&amp;filetimestamp=20191214042252&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body_tree.png" decoding="async" width="200" height="251" class="mw-file-element" data-file-width="251" data-file-height="315"></a></span> <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body_example.png&amp;filetimestamp=20180204083032&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body_example.png" decoding="async" width="300" height="261" class="mw-file-element" data-file-width="467" data-file-height="406"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Vlevo: Stromov&aacute; struktura zobrazuj&iacute;c&iacute; prvky, kter&eacute; postupn&#283; vytv&aacute;&#345;ej&iacute; kone&#269;n&yacute; tvar objektu. Vpravo: kone&#269;n&yacute; objekt viditeln&yacute; ve <a href="../3D_View.html" title="3D View">3D pohledu</a>.</p>
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
+<p><span id="Usage"></span>
+</p>
+<h2><span id="Pou.C5.BEit.C3.AD"></span><span class="mw-headline" id="Pou&#382;it&iacute;">Pou&#382;it&iacute;</span></h2>
 <p>If no previous solid is selected:
 </p>
 <ol><li>There are several ways to invoke the tool:
@@ -247,13 +249,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125171045
+Cached time: 20260125171050
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.271 seconds
-Preprocessor visited node count: 1498/1000000
+CPU time usage: 0.146 seconds
+Real time usage: 0.193 seconds
+Preprocessor visited node count: 1499/1000000
 Post&#8208;expand include size: 37719/2097152 bytes
 Template argument size: 9866/2097152 bytes
 Highest expansion depth: 7/100
@@ -263,19 +265,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.753      1 -total
- 17.24%   12.373      1 Template:PartDesign_Tools_navi/cs
- 13.77%    9.879     14 Template:PropertyData
- 10.91%    7.827     20 Template:Variable
-  9.12%    6.544      1 Template:Userdocnavi/cs
-  8.68%    6.227      1 Template:GuiCommand
-  7.09%    5.086      2 Template:Navigation_menu_2
-  6.53%    4.684      3 Template:TitleProperty
-  5.68%    4.078      2 Template:Code
-  5.10%    3.660      6 Template:PropertyView
+100.00%   47.842      1 -total
+ 16.01%    7.660      1 Template:PartDesign_Tools_navi/cs
+ 13.80%    6.602     14 Template:PropertyData
+ 11.71%    5.600     20 Template:Variable
+  9.81%    4.695      1 Template:Userdocnavi/cs
+  7.89%    3.774      2 Template:Navigation_menu_2
+  7.78%    3.721      1 Template:GuiCommand
+  6.31%    3.018      6 Template:PropertyView
+  5.85%    2.800      2 Template:Code
+  5.45%    2.609      3 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125171044 and revision id 1744065. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125171050 and revision id 1744067. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
