Created page with "==Hinweise=="

--- a/wiki/de/Sketcher_ConstrainEqual.html
+++ b/wiki/de/Sketcher_ConstrainEqual.html
@@ -2,9 +2,9 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Sketcher_ConstrainEqual.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Sketcher ConstrainEqual (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Croquizador RestringirIgual (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Contrainte d'&eacute;galit&eacute; (88% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Contrainte d'&eacute;galit&eacute; (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Vincolo uguale (88% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Szkicownik: Wi&#261;zanie r&oacute;wno&#347;ci (88% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Wi&#261;zanie r&oacute;wno&#347;ci (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Constraint EqualLength (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de igualdade (19% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Constr&icirc;ngere de egalitate (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -95,8 +95,9 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">Sketch</span><span class="o">.</span><span class="n">addConstraint</span><span class="p">(</span><span class="n">Sketcher</span><span class="o">.</span><span class="n">Constraint</span><span class="p">(</span><span class="s1">'Equal'</span><span class="p">,</span> <span class="n">Edge1</span><span class="p">,</span> <span class="n">Edge2</span><span class="p">))</span>
 </pre></div>
 <p>Die Seite <a href="../de/Sketcher_scripting.html" title="Sketcher scripting/de">Sketcher Skripterstellung</a> erkl&auml;rt die Werte, die f&uuml;r <code>Edge1</code> und <code>Edge2</code> verwendet werden k&ouml;nnen und enth&auml;lt weitere Beispiele, wie man Randbedingungen mit Python-Skripten erstellt.
+</p><p><span id="Notes"></span>
 </p>
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
 <ul><li>Using <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of equal constraints can prevent <a href="../Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">flipping</a>. Points constrained by these dimensions will only switch places if the sign of their value is changed. To keep the dimensions equal the constraints can be linked to each other with an expression, or to the same value in a <a href="../Std_VarSet.html" title="Std VarSet">VarSet</a> or <a href="../Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet">spreadsheet</a>.</li></ul>
 <p><br>
 </p>
@@ -142,35 +143,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102557
+Cached time: 20260125175215
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.139 seconds
-Preprocessor visited node count: 282/1000000
+CPU time usage: 0.090 seconds
+Real time usage: 0.156 seconds
+Preprocessor visited node count: 283/1000000
 Post&#8208;expand include size: 23348/2097152 bytes
 Template argument size: 9250/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3447/5000000 bytes
+Unstrip post&#8208;expand size: 3457/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.161      1 -total
- 18.21%    5.491      1 Template:Sketcher_Tools_navi/de
- 16.57%    4.999      1 Template:GuiCommand/de
- 14.05%    4.237      2 Template:Version/de
- 11.01%    3.320      2 Template:Docnav/de
-  8.35%    2.519      1 Template:Userdocnavi/de
-  8.04%    2.425      1 Template:Code
-  8.00%    2.412      2 Template:Incode
-  6.23%    1.878      5 Template:MenuCommand
-  5.88%    1.774      2 Template:Navigation_menu_2
+100.00%   27.053      1 -total
+ 22.17%    5.998      1 Template:Sketcher_Tools_navi/de
+ 18.21%    4.926      1 Template:GuiCommand/de
+ 11.25%    3.043      1 Template:Userdocnavi/de
+ 10.12%    2.738      2 Template:Docnav/de
+  9.13%    2.470      2 Template:Version/de
+  9.07%    2.455      2 Template:Navigation_menu_2
+  7.84%    2.121      1 Template:Code
+  7.06%    1.911      2 Template:Incode
+  5.83%    1.576      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:36671-0!canonical and timestamp 20260125102556 and revision id 1743591. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:36671-0!canonical and timestamp 20260125175215 and revision id 1744090. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
