--- a/wiki/de/Cables_Compatibility_with_BIM_Workbench.html
+++ b/wiki/de/Cables_Compatibility_with_BIM_Workbench.html
@@ -159,21 +159,21 @@
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr></tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Note_1">Note 1</span></h2>
-</div>
+<p><span id="Note_1"></span>
+</p>
+<h2><span class="mw-headline" id="Hinweis_1">Hinweis 1</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The object supports <a href="../Arch_Component.html#Data" title="Arch Component">Component &rarr; Base</a> property partially. It does not follow the base placement.
 </p>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260125175512
+Cached time: 20260125175526
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.031 seconds
-Real time usage: 0.043 seconds
+CPU time usage: 0.026 seconds
+Real time usage: 0.033 seconds
 Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 3/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -187,7 +187,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412642-0!canonical and timestamp 20260125175512 and revision id 1744096. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412642-0!canonical and timestamp 20260125175526 and revision id 1744098. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
