Replaced content with "==Descrizione=="

--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro BoundingBox Tracing/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+BoundingBox+Tracing&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BoundingBox Tracing (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Begrenzungsrahmen nachzeichen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_BoundingBox_Tracing.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro BoundingBox Tracing (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BoundingBox Tracing (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: &#346;ledzenie ramki otaczaj&#261;cej (4% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><a href="../cs/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--med" title="Macro BoundingBox Tracing (52% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="../cs/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--med" title="Macro BoundingBox Tracing (56% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; BoundingBox Tracing (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -76,11 +76,7 @@ Traccia contenitore
 </tbody></table>
 <p><span id="Description"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<p>Questa macro crea una traccia rossa di 6 rettangoli (modificabile) del parallelepipedo contenitore dell'oggetto, crea uno volume del boundBox.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This macro creates a red outline of the BoundingBox (6 Faces with 6 rectangles) of an object, display the dimension of the rectangle, create volume of boundBox.
 </p>
@@ -575,30 +571,30 @@ else:
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251009170203
+Cached time: 20260126094407
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.141 seconds
-Preprocessor visited node count: 155/1000000
+CPU time usage: 0.042 seconds
+Real time usage: 0.065 seconds
+Preprocessor visited node count: 154/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 30894/5000000 bytes
+Unstrip post&#8208;expand size: 30904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.292      1 -total
- 49.04%   11.913      2 Template:Caption
- 24.70%    6.000      1 Template:Macro/it
- 15.70%    3.814      1 Template:MacroCode
-  8.63%    2.096      2 Template:Code
+100.00%   10.944      1 -total
+ 33.43%    3.659      1 Template:Macro/it
+ 22.96%    2.513      2 Template:Code
+ 20.31%    2.223      1 Template:MacroCode
+ 19.57%    2.142      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20251009170203 and revision id 1659115. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126094407 and revision id 1744132. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
