Marked this version for translation

--- a/wiki/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/FEM_ConstraintElectrostaticPotential.html
@@ -1,11 +1,11 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FEM ConstraintElectrostaticPotential</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-FEM+ConstraintElectrostaticPotential&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--complete" title="FEM RandbedingungElektrostatischesPotential (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--high" title="FEM RandbedingungElektrostatischesPotential (76% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--complete" title="FEM Potentiel &eacute;lectrostatique (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM: Potenziale elettrostatico di vincolo (19% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--complete" title="MES: Warunek brzegowy potencja&#322;u elektrostatycznego (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><a href="pt-br/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de potencial eletrost&aacute;tico (19% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><a href="ru/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM &#1057;&#1086;&#1079;&#1076;&#1072;&#1090;&#1100; &#1101;&#1083;&#1077;&#1082;&#1090;&#1088;&#1086;&#1089;&#1090;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1087;&#1086;&#1090;&#1077;&#1085;&#1094;&#1080;&#1072;&#1083; (25% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
+<li><a href="fr/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--high" title="FEM Potentiel &eacute;lectrostatique (76% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM: Potenziale elettrostatico di vincolo (18% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--high" title="MES: Warunek brzegowy potencja&#322;u elektrostatycznego (76% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="pt-br/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de potencial eletrost&aacute;tico (18% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
+<li><a href="ru/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM &#1057;&#1086;&#1079;&#1076;&#1072;&#1090;&#1100; &#1101;&#1083;&#1077;&#1082;&#1090;&#1088;&#1086;&#1089;&#1090;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1087;&#1086;&#1090;&#1077;&#1085;&#1094;&#1080;&#1072;&#1083; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/FEM_ElementFluid1D.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="FEM_ElementFluid1D.html" title="FEM ElementFluid1D">Fluid Section for 1D Flow</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/FEM_ConstraintCurrentDensity.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="FEM_ConstraintCurrentDensity.html" title="FEM ConstraintCurrentDensity">Current Density Boundary Condition</a>
@@ -144,35 +144,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125144439
+Cached time: 20260126095051
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 468/1000000
+CPU time usage: 0.111 seconds
+Real time usage: 0.129 seconds
+Preprocessor visited node count: 469/1000000
 Post&#8208;expand include size: 24855/2097152 bytes
 Template argument size: 9922/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1829/5000000 bytes
+Unstrip post&#8208;expand size: 1814/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.785      1 -total
- 36.99%    8.058      1 Template:GuiCommandContainer
- 19.34%    4.212      1 Template:FEM_Tools_navi
- 18.39%    4.005      1 Template:GuiCommandFemInfo
- 16.73%    3.644      2 Template:Navigation_menu_2
- 11.17%    2.434      1 Template:Userdocnavi
- 10.21%    2.224      1 Template:GuiCommand
-  9.32%    2.031      2 Template:Docnav
-  5.61%    1.223      1 Template:VersionMinus
-  5.38%    1.172      5 Template:VersionPlus
+100.00%   22.317      1 -total
+ 36.85%    8.224      1 Template:GuiCommandContainer
+ 20.01%    4.466      1 Template:FEM_Tools_navi
+ 19.98%    4.458      2 Template:Navigation_menu_2
+ 18.84%    4.204      1 Template:GuiCommandFemInfo
+ 12.61%    2.815      1 Template:Userdocnavi
+  9.28%    2.071      1 Template:GuiCommand
+  8.46%    1.887      2 Template:Docnav
+  6.90%    1.540      5 Template:VersionPlus
+  5.44%    1.214      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260125144439 and revision id 1744049. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:107481-0!canonical and timestamp 20260126095051 and revision id 1744134. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
